# RF5ModLoader

./: README.md
BepInEx-LayeredFS/: LayeredFS.csproj  LayeredFS.sln  Plugin.cs
BepInEx-RF5ModLoader/: Plugin.cs  RF5ModLoader.csproj  RF5ModLoader.sln
LayeredFS/: Cargo.toml
LayeredFS/src/: lib.rs
RF5ModLoader/: RF5ModLoader.sln  RF5ModLoader.vcxproj
RF5ModLoader/src/: main.cpp
deadLayeredFS/: LayeredFS.filters  LayeredFS.sln  LayeredFS.vcxproj
deadLayeredFS/src/: dllmain.cpp  main.cpp  main.h
