[package]
name = "LayeredFS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
detour = "0.8.1"
lazy_static = "1.4.0"
walkdir = "2"

[dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader"
]

#[dependencies.windows]
#version = "0.39.0"
#features = [
#    "Win32_Foundation",
#    "Win32_System_SystemServices",
#    "Win32_System_LibraryLoader"
#]
